trying to build login

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -9,4 +9,6 @@
   <h1>Login</h1>
 </ion-text>
 <ion-button>Login</ion-button>
+<ion-button type="button" (click)="authService.GoogleAuth()">Login</ion-button>
+
 </ion-content>
