--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -12,6 +12,9 @@
       <ion-title size="large">Tab 1</ion-title>
     </ion-toolbar>
   </ion-header>
-
+  <ion-button>
+    {{ firebaseApp.name }}
+  </ion-button>
+  <app-auth></app-auth>
   <app-explore-container name="Tab 1 page"></app-explore-container>
 </ion-content>
