trying to save user login and displaying it

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -53,7 +53,7 @@
       <ion-col>
         <ion-button
           type="button"
-          (click)="authService.googleLogin()"
+          (click)="googleLogin()"
           color="light"
           expand="block"
           ><ion-icon name="logo-google" style="margin-right: 1ch"></ion-icon>
@@ -65,7 +65,7 @@
       <ion-col>
         <ion-button
           type="button"
-          (click)="authService.gitHubLogin()"
+          (click)="gitHubLogin()"
           color="dark"
           expand="block"
           ><ion-icon name="logo-github" style="margin-right: 1ch"></ion-icon>
@@ -77,7 +77,7 @@
       <ion-col>
         <ion-button
           type="button"
-          (click)="authService.twitterLogin()"
+          (click)="twitterLogin()"
           color="secondary"
           expand="block"
         >
