--- a/src/app/settings/settings.page.html
+++ b/src/app/settings/settings.page.html
@@ -5,5 +5,44 @@
 </ion-header>
 
 <ion-content>
-  <ion-button (click)="auth.signOut()">Sign Out</ion-button>
+  <div
+    style="
+      display: flex;
+      align-items: center;
+      margin: 2rem;
+      flex-direction: column;
+      gap: 1rem;
+    "
+  >
+    <img
+      src="{{ this.user.photoURL}}"
+      alt="user-profile-picture"
+      style="
+        border-radius: 50%;
+        width: 100px;
+        height: 100px;
+        object-fit: scale-down;
+      "
+    />
+    <p>{{user.displayName}}</p>
+  </div>
+  <ion-list>
+    <ion-item lines="full">
+      <ion-icon slot="start" name="moon"></ion-icon>
+      <ion-label> Dunkled Design </ion-label>
+      <ion-toggle
+        id="themeToggle"
+        slot="end"
+        (ionChange)="toggleTheme($event)"
+        checked="{{isDarkMode}}"
+      ></ion-toggle>
+    </ion-item>
+  </ion-list>
+  <ion-button
+    (click)="auth.signOut()"
+    color="danger"
+    expand="block"
+    style="margin-top: 2rem"
+    >Sign Out</ion-button
+  >
 </ion-content>
