sign up work in progress, saving user data

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <ion-app>
   <ion-router-outlet></ion-router-outlet>
-  <ng-container *ngIf="auth.currentUser"><app-nav></app-nav></ng-container>
+  <app-nav></app-nav>
 </ion-app>
