--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -11,10 +11,10 @@
         <ion-row>
           <ion-col>
             <ion-item>
-              <ion-label floating>Username</ion-label>
+              <ion-label floating>E-Mail</ion-label>
               <ion-input
-                type="text"
-                name="Username"
+                type="email"
+                name="email"
                 autocapitalize="none"
               ></ion-input>
             </ion-item>
@@ -37,7 +37,7 @@
         </ion-row>
         <ion-row>
           <ion-col>
-            <ion-button type="button" href="signup" expand="block"
+            <ion-button type="button" href="sign-up" expand="block"
               >Registrieren</ion-button
             >
           </ion-col>
