--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,16 +1,28 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="contacts">
-      <ion-icon name="person"></ion-icon>
-      <ion-label>Kontakte</ion-label>
-    </ion-tab-button>
-    <ion-tab-button tab="chats">
-      <ion-icon name="chatbubbles"></ion-icon>
-      <ion-label>Chats</ion-label>
-    </ion-tab-button>
-    <ion-tab-button tab="settings">
-      <ion-icon name="settings"></ion-icon>
-      <ion-label>Einstellungen</ion-label>
-    </ion-tab-button>
+    <ng-container *ngIf="auth.currentUser">
+      <ion-tab-button tab="contacts">
+        <ion-icon name="person"></ion-icon>
+        <ion-label>Kontakte</ion-label>
+      </ion-tab-button>
+      <ion-tab-button tab="chats">
+        <ion-icon name="chatbubbles"></ion-icon>
+        <ion-label>Chats</ion-label>
+      </ion-tab-button>
+      <ion-tab-button tab="settings">
+        <ion-icon name="settings"></ion-icon>
+        <ion-label>Einstellungen</ion-label>
+      </ion-tab-button>
+    </ng-container>
+    <ng-container *ngIf="!auth.currentUser">
+      <ion-tab-button tab="login">
+        <ion-icon name="person"></ion-icon>
+        <ion-label>Login</ion-label>
+      </ion-tab-button>
+      <ion-tab-button tab="sign-up">
+        <ion-icon name="add"></ion-icon>
+        <ion-label>Registrieren</ion-label>
+      </ion-tab-button>
+    </ng-container>
   </ion-tab-bar>
 </ion-tabs>
