--- a/src/app/settings/settings.page.html
+++ b/src/app/settings/settings.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>settings</ion-title>
+    <ion-title>Einstellungen</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -15,7 +15,7 @@
     "
   >
     <img
-      src="{{ this.user.photoURL}}"
+      src="{{ this.image }}"
       alt="user-profile-picture"
       style="
         border-radius: 50%;
@@ -25,8 +25,13 @@
       "
     />
     <p>{{user.displayName}}</p>
+    <p>{{user.email}}</p>
   </div>
   <ion-list>
+    <ion-item lines="full" href="/settings/profile">
+      <ion-label> Profil bearbeiten </ion-label>
+      <ion-icon slot="end" name="chevron-forward"></ion-icon>
+    </ion-item>
     <ion-item lines="full">
       <ion-icon slot="start" name="moon"></ion-icon>
       <ion-label> Dunkled Design </ion-label>
