--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -15,7 +15,7 @@
       </ion-tab-button>
     </ng-container>
     <ng-container *ngIf="!isLoggedIn">
-      <ion-tab-button tab="login">
+      <ion-tab-button tab="sign-in">
         <ion-icon name="person"></ion-icon>
         <ion-label>Login</ion-label>
       </ion-tab-button>
@@ -27,7 +27,11 @@
     <ng-container *ngIf="!isVerified">
       <ion-tab-button tab="verify-email">
         <ion-icon name="mail"></ion-icon>
-        <ion-label>verify-email</ion-label>
+        <ion-label>E-Mail verifizieren</ion-label>
+      </ion-tab-button>
+      <ion-tab-button tab="sign-out">
+        <ion-icon name="log-out"></ion-icon>
+        <ion-label>Ausloggen</ion-label>
       </ion-tab-button>
     </ng-container>
   </ion-tab-bar>
