working verify email & reset password

--- a/src/app/forgot-password/forgot-password.page.html
+++ b/src/app/forgot-password/forgot-password.page.html
@@ -11,7 +11,7 @@
         <ion-row>
           <ion-col>
             <ion-item>
-              <ion-label floating>E-Mail</ion-label>
+              <ion-label position="floating" floating>E-Mail</ion-label>
               <ion-input
                 type="email"
                 name="email"
