--- a/src/app/settings/profile/profile.page.html
+++ b/src/app/settings/profile/profile.page.html
@@ -20,7 +20,7 @@
         <ion-row>
           <ion-col>
             <ion-item>
-              <ion-label floating>Name</ion-label>
+              <ion-label position="floating" floating>Name</ion-label>
               <ion-input
                 type="text"
                 [(ngModel)]="model.displayName"
@@ -33,7 +33,7 @@
         <ion-row>
           <ion-col>
             <ion-item>
-              <ion-label floating>Telefonnummer</ion-label>
+              <ion-label position="floating" floating>Telefonnummer</ion-label>
               <ion-input
                 type="tel"
                 [(ngModel)]="model.phoneNumber"
@@ -47,7 +47,7 @@
         <ion-row>
           <ion-col>
             <ion-item>
-              <ion-label floating>Profilfoto URL</ion-label>
+              <ion-label position="floating" floating>Profilfoto URL</ion-label>
               <ion-input
                 type="text"
                 [(ngModel)]="model.photoURL"
@@ -59,7 +59,7 @@
         <ion-row>
           <ion-col>
             <ion-item>
-              <ion-label floating>Beschreibung</ion-label>
+              <ion-label position="floating" floating>Beschreibung</ion-label>
               <ion-textarea [(ngModel)]="model.description" name="description">
               </ion-textarea>
             </ion-item>
