--- a/src/app/settings/settings.page.html
+++ b/src/app/settings/settings.page.html
@@ -29,12 +29,12 @@
   </div>
   <ion-list>
     <ion-item lines="full" href="/settings/profile">
-      <ion-label> Profil bearbeiten </ion-label>
+      <ion-label position="floating"> Profil bearbeiten </ion-label>
       <ion-icon slot="end" name="chevron-forward"></ion-icon>
     </ion-item>
     <ion-item lines="full">
       <ion-icon slot="start" name="moon"></ion-icon>
-      <ion-label> Dunkled Design </ion-label>
+      <ion-label position="floating"> Dunkled Design </ion-label>
       <ion-toggle
         id="themeToggle"
         slot="end"
