--- a/src/app/contacts/contacts.page.html
+++ b/src/app/contacts/contacts.page.html
@@ -1,9 +1,10 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>contacts</ion-title>
+    <ion-buttons slot="end">
+      <ion-button (click)="openSearch()"><ion-icon name="add"></ion-icon></ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-
-</ion-content>
+<ion-content> </ion-content>
