--- a/src/app/contacts/contact/contact.component.html
+++ b/src/app/contacts/contact/contact.component.html
@@ -1,9 +1,6 @@
 <ion-item (click)="goto($event)" href="{{ 'chat/' + user.uid }}">
   <ion-avatar slot="start">
-    <ion-img
-      src="{{ getPhotoURL(user.photoURL, user.email) }}"
-      alt="profile-picture"
-    ></ion-img>
+    <ion-img src="{{ getPhotoURL(user) }}" alt="profile-picture"></ion-img>
   </ion-avatar>
   <ion-label>
     <h2>{{ user.displayName }} [{{ user.email }}]</h2>
