--- a/src/app/forgot-password/forgot-password.page.html
+++ b/src/app/forgot-password/forgot-password.page.html
@@ -14,6 +14,7 @@
               <ion-label position="floating" floating>E-Mail</ion-label>
               <ion-input
                 type="email"
+                inputmode="email"
                 name="email"
                 [(ngModel)]="email"
                 value="{{email}}"
