--- a/src/app/settings/profile/profile.page.html
+++ b/src/app/settings/profile/profile.page.html
@@ -23,6 +23,7 @@
               <ion-label position="floating" floating>Name</ion-label>
               <ion-input
                 type="text"
+                inputmode="text"
                 [(ngModel)]="model.displayName"
                 name="displayName"
               ></ion-input>
@@ -36,6 +37,7 @@
               <ion-label position="floating" floating>Telefonnummer</ion-label>
               <ion-input
                 type="tel"
+                inputmode="tel"
                 [(ngModel)]="model.phoneNumber"
                 name="phoneNumber"
               >
@@ -50,6 +52,7 @@
               <ion-label position="floating" floating>Profilfoto URL</ion-label>
               <ion-input
                 type="text"
+                inputmode="text"
                 [(ngModel)]="model.photoURL"
                 name="photoURL"
               ></ion-input>
