--- a/src/app/sign-up/sign-up.page.html
+++ b/src/app/sign-up/sign-up.page.html
@@ -16,6 +16,7 @@
             <ion-item>
               <ion-label position="floating" floating>E-Mail</ion-label>
               <ion-input
+                inputmode="email"
                 type="email"
                 [(ngModel)]="model.email"
                 name="email"
@@ -29,6 +30,7 @@
             <ion-item>
               <ion-label position="floating" floating>Password</ion-label>
               <ion-input
+                inputmode="password"
                 type="password"
                 [(ngModel)]="model.password"
                 name="password"
