--- a/src/app/contacts/contacts.page.html
+++ b/src/app/contacts/contacts.page.html
@@ -10,7 +10,7 @@
 </ion-header>
 
 <ion-content>
-  <ng-container *ngFor="let contact of contacts | async">
-    <app-contact [user]="contact"></app-contact>
+  <ng-container *ngFor="let contact of contacts">
+    <app-contact [user]="contact | async"></app-contact>
   </ng-container>
 </ion-content>
