--- a/src/app/sign-in/sign-in.page.html
+++ b/src/app/sign-in/sign-in.page.html
@@ -13,6 +13,7 @@
             <ion-item>
               <ion-label position="floating" floating>E-Mail</ion-label>
               <ion-input
+                inputmode="email"
                 type="email"
                 name="email"
                 [(ngModel)]="model.email"
@@ -27,6 +28,7 @@
             <ion-item>
               <ion-label position="floating" floating>Password</ion-label>
               <ion-input
+                inputmode="password"
                 type="password"
                 name="Password"
                 [(ngModel)]="model.password"
