--- a/src/global.scss
+++ b/src/global.scss
@@ -35,3 +35,10 @@
     margin-top: auto;
   }
 }
+
+.unread {
+  text-align: center;
+  padding: 4px 8px;
+  background: rgba(var(--ion-color-medium-rgb), 0.1);
+}
+
