--- a/src/app/chats/chat-message/chat-message.component.html
+++ b/src/app/chats/chat-message/chat-message.component.html
@@ -1,16 +1,16 @@
-<ng-container *ngIf="message$ | async as message">
-  <div
+<ng-container *ngIf="message">
+  <ion-item
     [ngClass]="{
       'chat-message': true,
-      own: receiverId === message.receiver._key.path.segments[6]
+      own: receiverId === message.receiverRef._key.path.segments[6]
     }"
+    id="{{ message.guid }}"
   >
     <div>
-      <div
-        class="name"
-        *ngIf="message.groupId && message.sender | async as senderInstance"
-      >
-        {{ message.sender.displayName }}
+      <div class="name" *ngIf="message.groupId">
+        <ng-container *ngIf="message.senderRef | doc | async as sender">
+          {{ sender.displayName }}
+        </ng-container>
       </div>
       <p class="text">
         {{ message | decrypt | async }}
@@ -21,5 +21,5 @@
         </div>
       </ng-container>
     </div>
-  </div>
+  </ion-item>
 </ng-container>
