--- a/src/app/chats/single-chat/single-chat.page.html
+++ b/src/app/chats/single-chat/single-chat.page.html
@@ -1,37 +1,49 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-button slot="start">
+  <ion-toolbar *ngIf="receiver$ | async as receiver">
+    <ion-buttons slot="start">
       <ion-back-button defaultHref="/chats"></ion-back-button>
-    </ion-button>
-    <ion-title>single-chat</ion-title>
+    </ion-buttons>
+
+    <ion-title>{{receiver.displayName}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <div class="message-container">
-    <ng-container *ngIf="messageRefs$ | async as mesasgeRefs">
+  <ion-list class="message-container">
+    <ng-container *ngIf="messageRefs$ | async as messageRefs">
       <ng-container *ngFor="let messageRef of messageRefs">
         <app-chat-message
-          *ngIf="messageRef | doc | async as message$"
-          [message$]="message$"
-          [receiverId]="uid"
+          *ngIf="messageRef | doc | async as message"
+          [message]="message"
+          [receiverId]="receiverId"
+          id="{{message.guid}}"
         ></app-chat-message>
       </ng-container>
     </ng-container>
-    <ng-container *ngIf="unreadMessageRefs$ | async as unreadMesasgeRefs">
+    <ng-container *ngIf="unreadMessageRefs$ | async as unreadMessageRefs">
       <ng-container *ngIf=" unreadMessageRefs && unreadMessageRefs.length > 0">
-        <div>{{messageRefs}}</div>
+        <ion-item class="unread">
+          {{unreadMessageRefs.length}} ungelesene Nachrichten
+        </ion-item>
         <ng-container *ngFor="let unreadMessageRef of unreadMessageRefs">
-          <app-chat-message
-            *ngIf="unreadMessageRef | doc |async as unreadMessage$"
-            [message$]="unreadMessage$"
-            [receiverId]="uid"
-          ></app-chat-message>
+          <ng-container *ngIf="unreadMessageRef | doc | async as unreadMessage">
+            <app-chat-message
+              *ngIf="unreadMessageRef | doc | async as unreadMessage"
+              appObserveVisibility
+              [debounceTime]="300"
+              (visible)="onVisible($event)"
+              [message]="unreadMessage"
+              [receiverId]="receiverId"
+              id="{{unreadMessage.guid}}"
+            ></app-chat-message>
+          </ng-container>
         </ng-container>
       </ng-container>
     </ng-container>
-    content
-  </div>
+  </ion-list>
 </ion-content>
 
-<app-chat-footer [responseTo]="responseTo" [receiverId]="uid"></app-chat-footer>
+<app-chat-footer
+  [responseTo]="responseTo"
+  [receiverId]="receiverId"
+></app-chat-footer>
