--- a/src/app/settings/profile/profile.page.html
+++ b/src/app/settings/profile/profile.page.html
@@ -1,8 +1,8 @@
 <ion-header>
   <ion-toolbar>
-    <ion-button slot="start">
+    <ion-buttons slot="start">
       <ion-back-button defaultHref="/settings"></ion-back-button>
-    </ion-button>
+    </ion-buttons>
     <ion-title>Einstellungen</ion-title>
   </ion-toolbar>
   <ion-toolbar>
